--- a/Emergency_Ventilator.ioc
+++ b/Emergency_Ventilator.ioc
@@ -11,7 +11,7 @@ PB10.Mode=I2C
 ADC1.ContinuousConvMode=ENABLE
 ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
 PC12.Locked=true
-TIM1.IPParameters=ClockDivision,AutomaticOutput,Period,Prescaler,Channel-PWM Generation1 CH1,Channel-Output Compare2 CH2
+TIM1.IPParameters=ClockDivision,AutomaticOutput,Period,Prescaler,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 RCC.PLLCLKFreq_Value=48000000
 PC12.Signal=GPIO_Output
@@ -32,6 +32,7 @@ PB6.GPIO_Label=MODE
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 PD2.Locked=true
 PD2.GPIOParameters=GPIO_Speed,GPIO_Label
+TIM1.Pulse-PWM\ Generation1\ CH1=600
 SH.S_TIM1_CH1.ConfNb=1
 PC1.Locked=true
 PB7.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
@@ -53,7 +54,6 @@ Mcu.IP3=I2C2
 RCC.SDIOHCLKDiv2FreqValue=24000000
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-TIM1.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
 TIM1.Prescaler=0
 Mcu.UserConstants=
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_5
@@ -136,6 +136,7 @@ PA6.Signal=ADCx_IN6
 ADC1.EnableInjectedConversion=DISABLE
 RCC.I2S2Freq_Value=48000000
 SH.GPXTI8.0=GPIO_EXTI8
+TIM1.Pulse-PWM\ Generation2\ CH2=600
 PA14.Locked=true
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=PRESSURE
@@ -233,6 +234,7 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 PA9.Signal=S_TIM1_CH2
 SH.S_TIM2_CH2.ConfNb=1
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 PB5.Locked=true
 PB9.Locked=true
 PC2.Locked=true
@@ -252,7 +254,7 @@ RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 RCC.APB2Freq_Value=12000000
 MxCube.Version=5.6.0
-SH.S_TIM1_CH2.0=TIM1_CH2,Output Compare2 CH2
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
 Mcu.Pin35=VP_TIM4_VS_ClockSourceINT
 SH.ADCx_IN2.ConfNb=1
 PC2.GPIOParameters=GPIO_Label
