--- a/Emergency_Ventilator.ioc
+++ b/Emergency_Ventilator.ioc
@@ -1,10 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
 NVIC.ADC1_2_IRQn=true\:0\:1\:false\:false\:true\:true\:false
-ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 PB10.Mode=I2C
 PC12.Locked=true
 TIM1.IPParameters=ClockDivision,AutomaticOutput,Period,Prescaler,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
 SH.GPXTI9.0=GPIO_EXTI9
+ADC2.Rank-5\#ChannelInjectedConversion=2
 RCC.PLLCLKFreq_Value=48000000
 PC12.Signal=GPIO_Output
 Dma.USART3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
@@ -35,10 +35,12 @@ ProjectManager.ProjectBuild=false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA8.Locked=true
 PA4.Locked=true
+ADC2.InjectedOffset-7\#ChannelInjectedConversion=0
 SH.GPXTI7.0=GPIO_EXTI7
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.0
 MxDb.Version=DB.5.0.60
 PB0.GPIOParameters=GPIO_Label
+ADC2.Rank-6\#ChannelInjectedConversion=3
 PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 PC4.GPIO_Label=LCD_RS
@@ -65,19 +67,17 @@ SH.GPXTI8.0=GPIO_EXTI8
 PA14.Locked=true
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 SH.GPXTI8.ConfNb=1
-ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_7
-USART3.IPParameters=VirtualMode,Mode
+USART3.IPParameters=VirtualMode
 PA5.GPIOParameters=GPIO_Label
 PC11.Mode=Asynchronous
 SH.ADCx_IN9.0=ADC2_IN9,IN9
 RCC.APB2CLKDivider=RCC_HCLK_DIV4
 RCC.APB1TimFreq_Value=24000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ADC2.Rank-2\#ChannelRegularConversion=3
 SH.ADCx_IN9.ConfNb=1
 TIM1.Period=1199
 Dma.USART3_TX.1.PeriphInc=DMA_PINC_DISABLE
-PA4.GPIO_Label=MOTOR_RIS
+PA4.GPIO_Label=MOTOR_LIS
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 ProjectManager.CustomerFirmwarePackage=
 PC4.GPIOParameters=GPIO_Speed,GPIO_Label
@@ -90,14 +90,14 @@ Dma.ADC1.0.Instance=DMA1_Channel1
 Mcu.PinsNb=39
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 SH.ADCx_IN6.0=ADC2_IN6,IN6
-ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,master,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,EnableInjectedConversion
-ADC2.Rank-3\#ChannelRegularConversion=4
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,EnableInjectedConversion,master,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion
 PA9.GPIO_Label=MOTOR_N
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB8.GPIO_PuPd=GPIO_PULLDOWN
 PC6.Signal=GPIO_Output
 PC2.Signal=GPIO_Output
 PC0.Signal=GPIO_Output
+ADC2.Rank-7\#ChannelInjectedConversion=4
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 SH.S_TIM2_CH1_ETR.ConfNb=1
 RCC.I2S3Freq_Value=48000000
@@ -112,7 +112,7 @@ ADC2.ContinuousConvMode=DISABLE
 PC12.PinState=GPIO_PIN_SET
 TIM4.IPParameters=Prescaler,Period
 SH.ADCx_IN7.0=ADC2_IN7,IN7
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,ExternalTrigConv,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,NbrOfConversion
+ADC2.IPParameters=ContinuousConvMode,EnableInjectedConversion,InjNumberOfConversion,Rank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,Rank-5\#ChannelInjectedConversion,Channel-5\#ChannelInjectedConversion,SamplingTime-5\#ChannelInjectedConversion,InjectedOffset-5\#ChannelInjectedConversion,Rank-6\#ChannelInjectedConversion,Channel-6\#ChannelInjectedConversion,SamplingTime-6\#ChannelInjectedConversion,InjectedOffset-6\#ChannelInjectedConversion,Rank-7\#ChannelInjectedConversion,Channel-7\#ChannelInjectedConversion,SamplingTime-7\#ChannelInjectedConversion,InjectedOffset-7\#ChannelInjectedConversion,EnableRegularConversion
 PC6.Locked=true
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 PA9.Signal=S_TIM1_CH2
@@ -124,7 +124,6 @@ PB9.Locked=true
 PB10.Signal=I2C2_SCL
 PA5.Signal=ADCx_IN5
 ProjectManager.LastFirmware=true
-ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_8
 NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin38=VP_TIM4_VS_ClockSourceINT
@@ -141,9 +140,10 @@ SH.ADCx_IN4.0=ADC1_IN4,IN4
 Mcu.Pin32=PB7
 PA9.Locked=true
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+ADC2.SamplingTime-6\#ChannelInjectedConversion=ADC_SAMPLETIME_239CYCLES_5
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
-PC9.GPIOParameters=GPIO_Label
+PC9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 Mcu.Pin26=PC10
 Mcu.Pin27=PC11
 Mcu.Pin24=PA13
@@ -155,23 +155,22 @@ Mcu.Pin29=PD2
 PA4.Signal=ADCx_IN4
 Mcu.Pin22=PA8
 PB5.Signal=GPXTI5
-USART3.Mode=MODE_TX_RX
 Mcu.Pin23=PA9
 RCC.TimSysFreq_Value=6000000
 Mcu.Pin20=PC6
 ADC1.master=1
 PA3.Locked=true
 Mcu.Pin21=PC9
-PA5.GPIO_Label=MOTOR_LIS
-ADC2.NbrOfConversionFlag=1
+PA5.GPIO_Label=MOTOR_RIS
 NVIC.ForceEnableDMAVector=false
-PB5.GPIO_PuPd=GPIO_PULLDOWN
+PB5.GPIO_PuPd=GPIO_PULLUP
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PC12.GPIO_Label=LED
 ProjectManager.CompilerOptimize=6
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PC5
+ADC2.Channel-7\#ChannelInjectedConversion=ADC_CHANNEL_9
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PB0
 Mcu.Pin13=PA7
@@ -191,6 +190,7 @@ PC3.GPIO_Label=LCD_DB7
 SH.ADCx_IN5.ConfNb=1
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PD2.Signal=GPIO_Output
+ADC2.Channel-5\#ChannelInjectedConversion=ADC_CHANNEL_7
 PB0.Signal=ADCx_IN8
 PA7.GPIOParameters=GPIO_Label
 ADC1.Rank-5\#ChannelRegularConversion=4
@@ -200,17 +200,15 @@ PD2.GPIO_Label=MOTOR_ENABLE
 Mcu.Family=STM32F1
 ProjectManager.MainLocation=Core/Src
 RCC.MCOFreq_Value=48000000
-ADC2.ExternalTrigConv=ADC_SOFTWARE_START
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F103RCTx
 ADC1.ContinuousConvMode=ENABLE
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_6
 SH.ADCx_IN2.0=ADC1_IN2,IN2
 Dma.USART3_TX.1.MemInc=DMA_MINC_ENABLE
 PC10.Signal=USART3_TX
 PC5.Locked=true
 PB6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_I2C2_Init-I2C2-false-HAL-true,7-MX_TIM1_Init-TIM1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM4_Init-TIM4-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_DAC_Init-DAC-false-HAL-true,11-MX_USART3_UART_Init-USART3-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PA9.GPIOParameters=GPIO_Speed,GPIO_Label
 PC0.GPIO_Label=LCD_DB4
@@ -229,6 +227,7 @@ PB5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PD1-OSC_OUT.Locked=true
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 Mcu.IP4=NVIC
+ADC2.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_239CYCLES_5
 Mcu.IP5=RCC
 RCC.FCLKCortexFreq_Value=48000000
 Mcu.IP2=DMA
@@ -288,18 +287,17 @@ TIM1.Pulse-PWM\ Generation2\ CH2=600
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=PRESSURE
 SH.GPXTI5.ConfNb=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
-ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
+ADC2.InjectedOffset-4\#ChannelInjectedConversion=0
 PB5.GPIO_Label=CONFIRM
-ADC2.NbrOfConversion=4
 Dma.Request1=USART3_TX
 PC4.Locked=true
+ADC2.InjectedOffset-5\#ChannelInjectedConversion=0
 PC5.Signal=GPIO_Output
-ADC2.Rank-0\#ChannelRegularConversion=1
 Dma.Request0=ADC1
 PC2.GPIO_Label=LCD_DB6
+ADC2.InjectedOffset-6\#ChannelInjectedConversion=0
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
-ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_9
+PC9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA3.Signal=ADCx_IN3
 PA2.Locked=true
 PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
@@ -317,9 +315,11 @@ PC4.Signal=GPIO_Output
 PC10.Mode=Asynchronous
 ProjectManager.DefaultFWLocation=true
 PD0-OSC_IN.Signal=RCC_OSC_IN
+ADC2.EnableRegularConversion=DISABLE
 ProjectManager.DeletePrevious=true
 PB10.Locked=true
 RCC.TimSys_Div=SYSTICK_CLKSOURCE_HCLK_DIV8
+ADC2.SamplingTime-5\#ChannelInjectedConversion=ADC_SAMPLETIME_239CYCLES_5
 RCC.FamilyName=M
 ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
 TIM1.ClockDivision=TIM_CLOCKDIVISION_DIV1
@@ -332,6 +332,7 @@ SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 ProjectManager.TargetToolchain=Makefile
 Dma.ADC1.0.Mode=DMA_CIRCULAR
 Dma.USART3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
@@ -339,6 +340,7 @@ PB7.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PC5.GPIOParameters=GPIO_Label
 PC2.Locked=true
 RCC.USBFreq_Value=48000000
+ADC2.Rank-4\#ChannelInjectedConversion=1
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 TIM4.Prescaler=23
 PA1.Signal=S_TIM2_CH2
@@ -346,6 +348,7 @@ PB1.Locked=true
 SH.S_TIM1_CH2.ConfNb=1
 PD0-OSC_IN.Mode=HSE-External-Oscillator
 board=custom
+ADC2.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_6
 RCC.VCOOutput2Freq_Value=8000000
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 RCC.APB2Freq_Value=12000000
@@ -355,7 +358,6 @@ SH.ADCx_IN2.ConfNb=1
 PC1.GPIO_Label=LCD_DB5
 VP_SYS_VS_Systick.Mode=SysTick
 PA4.GPIOParameters=GPIO_Label
-ADC2.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_239CYCLES_5
 SH.ADCx_IN8.ConfNb=1
 ADC1.NbrOfConversion=4
 RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,TimSys_Div,USBFreq_Value,VCOOutput2Freq_Value
@@ -364,14 +366,15 @@ Mcu.Name=STM32F103R(C-D-E)Tx
 PA2.Signal=ADCx_IN2
 Mcu.IP8=TIM2
 Mcu.IP9=TIM3
+ADC2.EnableInjectedConversion=ENABLE
 Mcu.IP6=SYS
 Mcu.IP7=TIM1
 ProjectManager.CoupleFile=false
 RCC.SYSCLKFreq_VALUE=48000000
 PA7.GPIO_Label=TIDAL
 PA1.Locked=true
-ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
 ADC1.Rank-3\#ChannelRegularConversion=2
+ADC1.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_13CYCLES_5
 KeepUserPlacement=false
 PC5.GPIO_Label=LCD_E
 USART3.VirtualMode=VM_ASYNC
@@ -383,13 +386,15 @@ Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 PC6.GPIOParameters=GPIO_Label
 ADC1.NbrOfConversionFlag=1
 Dma.USART3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+ADC2.Channel-6\#ChannelInjectedConversion=ADC_CHANNEL_8
 PB7.Locked=true
-ADC2.Rank-1\#ChannelRegularConversion=2
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB8.Signal=GPXTI8
+ADC2.SamplingTime-7\#ChannelInjectedConversion=ADC_SAMPLETIME_239CYCLES_5
 PC9.Signal=GPXTI9
 RCC.APB1Freq_Value=12000000
 PD0-OSC_IN.Locked=true
+ADC2.InjNumberOfConversion=4
 PB11.Locked=true
 ProjectManager.DeviceId=STM32F103RCTx
 ProjectManager.LibraryCopy=1
